--- a/client/src/components/Merchant/Merchant.css
+++ b/client/src/components/Merchant/Merchant.css
@@ -1,7 +1,31 @@
-.merchantNavbar{
-    display: flex;
-    background-color: blue;
-    justify-content: space-between;
-    /* padding: 20px; */
-    /* height: 70px;     */
+.merchantNavbar {
+  display: flex;
+  background-color: blue;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.drawer {
+  /* margin-top: 30px; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-width: 20vw;
+}
+
+.profile {
+  padding: 30px 0px 30px 0px;
+  width: 100%;
+  background-color: blue;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: white;
+}
+
+.AddItemBox{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  /* align-items: center; */
 }
