created table and footer

--- a/client/src/components/Merchant/Merchant.css
+++ b/client/src/components/Merchant/Merchant.css
@@ -29,3 +29,13 @@
   justify-content: center;
   /* align-items: center; */
 }
+
+.merchantHome {
+  background-color: rgb(238, 238, 238);
+}
+
+.pieChart {
+  background-color: white;
+  border-radius: 5px;
+  padding: 20px;
+}
